[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-iot"
version = "0.1.0"
description = "IoT transport layer for TIBET — UDP transport, LAN discovery, and mesh relay over tibet-ping protocol."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "J. van de Meent", email = "jasper@humotica.com"},
    {name = "R. AI", email = "root_idd@humotica.nl"},
]
keywords = [
    "tibet", "iot", "transport", "udp", "mesh", "relay",
    "discovery", "multicast", "asyncio", "ping",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
    "Framework :: AsyncIO",
]
dependencies = [
    "tibet-ping>=0.1.3",
]

[project.optional-dependencies]
msgpack = ["msgpack>=1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
tibet-iot = "tibet_iot.cli:main"

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/Humotica/tibet-iot"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_iot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
